new structure working, logger implemented and api simplified. NEXT: revise and go with new frontend view
