# openface-api/api/models/__init__.py
@@ -1,7 +1,0 @@
-"""
-Model classes for OpenFace API
-"""
-
-from .analyzer import OpenFaceAnalyzer
-
-__all__ = ['OpenFaceAnalyzer']
