# openface-api/api/websocket/__init__.py
@@ -1,7 +1,0 @@
-"""
-WebSocket modules for OpenFace API
-"""
-
-from .handlers import register_websocket_handlers
-
-__all__ = ['register_websocket_handlers']
